# Exam-Repository-System

./: README.md
Backend-Python/: .gitignore  config.py  database.py  main.py  pyproject.toml  security.py  seed.py
Backend-Python/models/: __init__.py  course.py  paper.py  question.py  upload_registry.py  user.py
Backend-Python/repositories/: course_repo.py  paper_repo.py  payment_repo.py  question_repo.py  upload_registry_repo.py  user_repo.py
Backend-Python/routers/: courses.py  papers.py  payments.py  users.py
Backend-Python/schemas/: paper.py  user.py
Backend-Python/services/: __init__.py  email.py  gemini.py  metrics.py  storage.py
Backend-Python/tasks/: paper_processing.py  upgrade_answers_task.py  watchdog.py
Frontend/: eslint.config.js  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/Assets/: Assets.js
Frontend/src/Components/AboutUs/: AboutUs.jsx
Frontend/src/Components/ConfirmModal/: ConfirmContext.js  ConfirmModal.jsx
Frontend/src/Components/Dashboard/: Dashboard.jsx
Frontend/src/Components/Footer/: Footer.jsx
Frontend/src/Components/Hero/: Hero.jsx
Frontend/src/Components/Legal/: LegalDocument.jsx
Frontend/src/Components/Login/: AuthSidebar.jsx  Login.jsx
Frontend/src/Components/Navbar/: Navbar.jsx
Frontend/src/Components/Papers/: PaperDetail.jsx  PapersList.jsx
Frontend/src/Components/Question/: Question.jsx
Frontend/src/Components/Signup/: Signup.jsx
Frontend/src/Context/: AuthContext.js  ConfigContext.jsx
Frontend/src/Hooks/: AuthHook.js
Frontend/src/services/: api.js
(+11 files in other folders)
